create visitor page

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -38,5 +38,11 @@
       "service": "Lambda",
       "dependsOn": []
     }
+  },
+  "hosting": {
+    "S3AndCloudFront": {
+      "service": "S3AndCloudFront",
+      "providerPlugin": "awscloudformation"
+    }
   }
 }
