--- a/electron/package.json
+++ b/electron/package.json
@@ -1,7 +1,7 @@
 {
   "name": "clap-hand",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "Clap Hand App",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
@@ -17,7 +17,8 @@
   "author": "GitHub",
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "^10.1.3"
+    "electron": "^10.1.3",
+    "electron-packager": "^15.1.0"
   },
   "dependencies": {
     "apollo-cache-inmemory": "^1.1.0",
